--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,8 @@
 {
     "require": {
         "phpoffice/phpspreadsheet": "^1.24"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^12.2"
     }
 }
